# HelloWorld

./: CMakeLists.txt  a.txt  hello.cpp  main.cpp
